update config route, fix name docker
